--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,4 +23,8 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+    
+    - name: Build Windows
+      run: GOOS=windows GOARCH=amd64 go build -v ./...
+      
 
