--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,12 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.20
-        run: go build -v ./... && GOOS=windows GOARCH=amd64 go build -v ./...
+
+      - name: Build
+        run: go build -v ./...
+
+      - name: Build Windows
+        run: GOOS=windows GOARCH=amd64 go build -v ./...
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
