--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,17 +11,11 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: 1.20
-
-      - name: Build
-        run: go build -v ./...
-
-      - name: Build Windows
-        run: GOOS=windows GOARCH=amd64 go build -v ./...
+      - run: go build -v ./...
+      - run: GOOS=windows GOARCH=amd64 go build -v ./...
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
