--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.20
-      - run: go build -v ./...
+      - run: ls -lha && go build -v ./...
       - run: GOOS=windows GOARCH=amd64 go build -v ./...
 
       - uses: "marvinpinto/action-automatic-releases@latest"
