--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
+        name: "Build app"
         with:
           go-version: 1.20
-      - run: ls -lha && go build -v ./...
-      - run: GOOS=windows GOARCH=amd64 go build -v ./...
+      - run: ls -lha && go build -v ./... && GOOS=windows GOARCH=amd64 go build -v ./...
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
