--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,10 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.20
+          go-version: 1.19
       - run: ls -lha && go mod vendor && go build -v ./... && GOOS=windows GOARCH=amd64 go build -v ./...
         name: "Build apps"
 
